# reqwest_cpp

./: .gitignore  CMakeLists.txt  README.MD  deployed.sh
client/: CMakeLists.txt  Cargo.toml  build.rs
client/src/: build.rs  client.rs  errors.rs  ffi.rs  headermap.rs  lib.rs  proxy.rs  request.rs  response.rs  utils.rs
gui/: CMakeLists.txt  ffi.hpp  main.cpp  main_window.cpp  main_window.hpp  rstring.hpp  wrappers.cpp  wrappers.hpp
