[package]
name = "client"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "The business logic for a REST client"
repository = "https://github.com/Michael-F-Bryan/rust-ffi-guide"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
cookie = "0.17.0"
delegate = "0.9.0"
error-chain = "0.12.4"
fern = "0.6.1"
lazy_static = "1.4.0"
libc = "0.2.139"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }


[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.24.3"
