[package]
name = "client"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "The business logic for a REST client"
repository = "https://github.com/Michael-F-Bryan/rust-ffi-guide"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
fern = "0.6.1"
libc = "0.2.139"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json","__tls"] }


[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.24.3"
